# pyesql

./: .gitignore  LICENSE  Makefile  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  detection-rules.yml  publish.yml
pyesql/: __init__.py  ast.py  cli.py  errors.py  lexer.py  parser.py  schema.py  validator.py  visitor.py  walker.py
scripts/: test_detection_rules.py
tests/: test_parser.py  test_schema.py  test_version.py
